--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 cmake_minimum_required(VERSION 3.4.1)
 
-
-add_library( # Specifies the name of the library.
-
-             src/main/cpp/native-lib.cpp )
+project("TinyVulcano")
+add_executable("TinyVulcano" "main.cpp"")
